--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Reverie
+name: Functions^
 
 # Name of the author
-author: Amit Merchant
+author: MerHS
 
 # Short bio or description (displayed in the header)
-description: An elegant Jekyll theme
+description: Pro+Con Languages
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/reverie.png
@@ -21,38 +21,37 @@ avatar: /images/reverie.png
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: amit.d.merchant@gmail.com
+  email: starvessel@naver.com
   facebook:
   flickr:
-  github: amitmerchant1990/reverie
+  github: MerHS/MerHS.github.io
   instagram:
-  linkedin: 
+  linkedin: ho-young-jhoo-289710161
   pinterest:
-  rss: rss
-  twitter: amit_merchant
-  stackoverflow: 
+  rss:
+  twitter: vu_port
+  stackoverflow:
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
   playconsole:
 
-
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
-disqus: 
+disqus: MerHS
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics: UA-43339302-11
+google_analytics:
 
 # Your website URL (e.g. http://amitmerchant1990.github.io or http://www.amitmerchant.com)
 # Used for Sitemap.xml and your RSS feed
-url: http://www.amitmerchant.com/reverie
-enforce_ssl: https://www.amitmerchant.com/reverie
+url: http://MerHS.github.io
+enforce_ssl: https://MerHS.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/reverie"
+baseurl:
 
 #
 # !! You don't need to change any of the configuration flags below !!
@@ -71,7 +70,7 @@ kramdown:
   syntax_highlighter: rouge
   syntax_highlighter_opts:
     # Use existing pygments syntax highlighting css
-    css_class: 'highlight'
+    css_class: "highlight"
 
 # Set the Sass partials directory, as we're using @imports
 sass:
@@ -84,7 +83,7 @@ plugins:
   - jekyll-seo-tag
   - jekyll-paginate
 
-include: ['_pages']
+include: ["_pages"]
 
 paginate: 6
 paginate_path: /page:num/
@@ -96,4 +95,3 @@ exclude:
   - LICENSE
   - README.md
   - CNAME
-
